ya arregle los cambios de Choco

--- a/firebase.json
+++ b/firebase.json
@@ -1,8 +1,11 @@
 {
   "hosting": {
-    "site": "ultraweb",
-    "public": "public",
-    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+    "public": "build",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
     "rewrites": [
       {
         "source": "**",
